# BudgyBot

./: .gitignore  pyproject.toml
backend/: pyproject.toml
backend/src/budgybot/: __main__.py  api.py  budgy_conf.toml  configurator.py  csv_records.py  records.py
backend/src/budgybot/api/: __init__.py  bankaccount.py  transactions.py
backend/src/budgybot/entry_types/: __init__.py  chase.py  discover.py  statement_protocol.py
backend/src/budgybot/persistent_models/: __init__.py  banks.py  pay.py  transactions.py  users.py
backend/src/budgybot/records_analysis/: summations.py
backend/src/budgybot/temporary_models/: abc.py  discover.py
backend/src/budgybot/utils/: __init__.py  sql_pathtype.py
backend/tests/: conftest.py  test_db_interactions.py  test_summations.py
backend/tests/api_tests/: conftest.py  test_bank_account_api.py  test_transactions_api.py
frontend/budgybot/: .prettierignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/budgybot/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/budgybot/src/routes/Banks/: +page.svelte
frontend/budgybot/src/routes/Budget/: +page.svelte
src/budgybot/: __main__.py  budgy_conf.toml  configurator.py  csv_data.py  csv_records.py  records.py  records_keeper.py  records_models.py
src/budgybot/persistent_models/: __init__.py  banks.py  pay.py  transactions.py  users.py
src/budgybot/records_analysis/: summations.py
src/budgybot/statement_models/: __init__.py  abc.py  chase.py  discover.py
src/budgybot/temporary_models/: abc.py  chase.py  discover.py
src/budgybot/utils/: helper_enums.py
tests/: conftest.py  test_db_interactions.py  test_summations.py
