[project]
name = "budgybot"
version = "0.1.0"
description = "A Personal finance and budgeting app consuming Chase exported CSV's"
authors = [
    {name = "Ty Freeman",email = "freemanty27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]




